pag inicio hecha

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="indexStyle.css">
     <title>Practicas ACSI</title>
 </head>
@@ -19,11 +20,32 @@
                 sistemes informàtics de la Universidad de las Islas Baleares.</p>
         </div>
         <div class="content">
+            <p>Lista practicas:</p>
             <a href="CP_p1/P1Web/CP_p1.html">Práctica 1</a>
             <a href="CP_p2/P2Web/CP_p2.html">Práctica 2</a>
             <a href="CP_p3/P3Web/CP_p3.html">Práctica 3</a>
         </div>
     </div>
+    <footer class="footer">
+        <div class="contenedor" id="footer-content">
+            <div class="contact-us">
+                <h2 class="autor">Autor</h2>
+                <p>Sergi Mayol Matos.</p>
+            </div>
+            <div class="social-media">
+                <a href="./" class="social-media-icon">
+                    <i class='bx bxl-youtube'></i>
+                </a>
+                <a href="./" class="social-media-icon">
+                    <i class='bx bxl-github'></i>
+                </a>
+                <a href="./" class="social-media-icon">
+                    <i class='bx bxl-instagram'></i>
+                </a>
+            </div>
+        </div>
+        <div class="line"></div>
+    </footer>
 </body>
 
 </html>
