--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
 <body>
     <div class="container">
         <div class="title">
-            <h2>Practicas ACSI</h2>
+            <h2>Prácticas ACSI</h2>
         </div>
         <div class="summary">
             <p>Aqui están todas las practicas realizadas durante 2022 de la asignatura Avaluació del comportament de
                 sistemes informàtics de la Universidad de las Islas Baleares.</p>
         </div>
         <div class="content">
-            <p>Lista practicas:</p>
-            <a href="CP_p1/P1Web/CP_p1.html">Práctica 1</a>
-            <a href="CP_p2/P2Web/CP_p2.html">Práctica 2</a>
-            <a href="CP_p3/P3Web/CP_p3.html">Práctica 3</a>
+            <div class="lista-practicas">
+                <p>Listado prácticas:</p>
+                <a href="CP_p1/P1Web/CP_p1.html">Práctica 1</a>
+                <a href="CP_p2/P2Web/CP_p2.html">Práctica 2</a>
+                <a href="CP_p3/P3Web/CP_p3.html">Práctica 3</a>
+            </div>
         </div>
     </div>
     <footer class="footer">
