--- a/index.html
+++ b/index.html
@@ -22,9 +22,19 @@
         <div class="content">
             <div class="lista-practicas">
                 <p>Listado prácticas:</p>
-                <a href="CP_p1/P1Web/CP_p1.html">Práctica 1</a>
-                <a href="CP_p2/P2Web/CP_p2.html">Práctica 2</a>
-                <a href="CP_p3/P3Web/CP_p3.html">Práctica 3</a>
+                <a href="src/CP/CP_p1/P1Web/CP_p1.html">Práctica 1</a>
+                <a href="src/CP/CP_p2/P2Web/CP_p2.html">Práctica 2</a>
+                <a href="src/CP/CP_p3/P3Web/CP_p3.html">Práctica 3</a>
+            </div>
+            <div class="lista-cuestiones-teoricas">
+                <p>Listado cuestiones teoricas:</p>
+                <a href="src/CT/CT_1/CuestionTeorica1.html">CuestionTeorica 1</a>
+                <a href="src/CT/CT_2/CuestionTeorica2.html">CuestionTeorica 2</a>
+                <a href="src/CT/CT_3/CuestionTeorica3.1.html">CuestionTeorica 3.1</a>
+                <a href="src/CT/CT_3/CuestionTeorica3.2.html">CuestionTeorica 3.2</a>
+                <a href="src/CT/CT_3/CuestionTeorica3.3.html">CuestionTeorica 3.3</a>
+                <a href="src/CT/CT_4/CuestionTeorica4.1.html">CuestionTeorica 4.1</a>
+                <a href="src/CT/CT_4/CuestionTeorica4.2.html">CuestionTeorica 4.2</a>
             </div>
             <div class="line"></div>
             <div class="Extra">
@@ -33,6 +43,7 @@
             </div>
         </div>
     </div>
+    <!--
     <footer class="footer">
         <div class="contenedor" id="footer-content">
             <div class="contact-us">
@@ -52,7 +63,7 @@
             </div>
         </div>
         <div class="line"></div>
-    </footer>
+    </footer>-->
 </body>
 
 </html>
